--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,7 +10,35 @@ body {
     align-items: center;
     flex-direction: column;
 }
-
+.content {
+    min-height: 80vh;
+}
+.btn {
+    background-color: rgb(34, 34, 34);
+    padding: 8px;
+    color: #fff;
+    text-decoration: none;
+    opacity: 1;
+    border: none;
+    font-family: 'Montserrat';
+}
+.btn:hover {
+    opacity: 0.8;
+}
+.btn-blue {
+    background-color: rgb(0, 35, 99);
+}
+.btn-red {
+    background-color: rgb(119, 0, 0);
+}
+th {
+    background-color: rgb(34, 34, 34);
+    color: #fff;
+}
+th,td {
+    padding: 10px;
+    text-align: center;
+}
 .space-between {
     width: 80vw;
     display: flex;
